Fix home callout title alignment.

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -132,6 +132,7 @@ $card-gutter: 40px;
 
 .home-callout {
   padding: $scaleup-4 $scaleup-3 $scaleup-7;
+  display: block;
 
   .btn {
     height: 40px;
